syntax = "proto3";

option go_package = ".;service";

service PodAffinityAware {
  
  rpc GetNumaNodeInof(NullRequest) returns (NumaInfoResponse) {}

  rpc GetPodAffinity(AffinityRequest) returns (AffinityResponse) {}

}


message NullRequest {}

message NumaNode {
  int64 numaNumer = 1;
  string cpuset = 2;
  string memset = 3;
}

message NumaInfoResponse {
  bool valid = 1; 
  repeated NumaNode numaNodes = 2;
}

message Pod {
  repeated string containerdIDs = 1;
  string uid = 2;
  string podName = 3;
  string podNamespace = 4;
}

message AffinityRequest {
  repeated Pod pods = 1;
}

message AffinityGroup {
  int64 numaNumer = 1;
  repeated Pod pods = 2;
}


message AffinityResponse {
  repeated AffinityGroup affinityGroup = 1;
}
